# FutureTech

./: .gitignore  AGENTS.md  HelloWorld.py  README.md  StorageVisualizer.spec  pyproject.toml  scopeOfVariables.py
.github/: copilot-instructions.md
.github/agents/: README.md  ai-genai-experiments.agent.md  bug-triage-debug.agent.md  build-validation-runner.agent.md  data-structure-implementer.agent.md  git-commit-push-guard.agent.md  logger-variant-boundary.agent.md  pandas-script-analyst.agent.md  problem-solution-coach.agent.md  (+4 more)
AI/: Agent.py  GoogleAI.py  NutritionLabelReader.py
Adhoc/: DeepDiffPrac.py  RemoveBackground.py
Basics/: Loops.py
DataStructures/: BPlusTree.py  BTree.py  BloomFilter.py  CountMinSketch.py  CuckooFilter.py  DisjointSet.py  DoublyLinkedList.py  FenwickTree.py  Graph.py  Heap.py  HyperLogLog.py  LRUCache.py  RedBlackTree.py  SegmentTree.py  SkipList.py  SortedSet.py  Trie.py
Design Patterns/: Singleton.py
LLD/: ElevatorSystem.py  LibraryManagement.py  ParkingLot.py  Splitwise.py  TaskScheduler.py
SystemDesign/: ConsistentHashing.py  SSTable.py
Utils/: ConsoleSink.py  FileSink.py  LoggerConfigReader.py  LoggerFactory.py  Message.py  Pdf2Docx.py  PriorityBuffer.py  Sink.py
tests/: test_bloom_filter.py  test_bplus_tree.py  test_btree.py  test_consistent_hashing.py  test_disjoint_set.py  test_fenwick_tree.py  test_graph.py  test_heap.py  test_lru_cache.py  test_probabilistic.py  test_red_black_tree.py  test_segment_tree.py  test_skip_list.py  test_sorted_set.py  test_sstable.py  test_storage_graph.py  test_trie.py
(+127 files in other folders)
